# imagine-todo-api

./: .gitignore  Cargo.toml  README.MD  todo.db
.shuttle/: config.toml
src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs
static/: index.html
