[package]
name = "imagine-todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6.6"
actix-service = "2.0.2"
actix-rt = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
jsonwebtoken ="9"
dotenv = "0.15.0"
rusqlite = { version = "0.26", features = ["bundled"] } 
bcrypt = "0.13" 
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
utoipa = "5.1.1"
chrono = "0.4.28"
futures = "0.3"
